tmux: shuffle keybinds
main idea is:
- Alt-e and Alt-o for splits now
- Ctrl-f for copy-mode-vi
- Ctrl-g for copy-mode-vi + search
- Enter no longer yanks from copy-mode-vi (it just moves down, like in
  vim)

--- a/shell/.config/tmux/tmux.conf
+++ b/shell/.config/tmux/tmux.conf
@@ -8,11 +8,9 @@ set -g history-limit 100000
 set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",xterm-256color:RGB"
 
-# terminator like window splits
-bind e split-window -h -c '#{pane_current_path}'
-bind C-e split-window -h -c '#{pane_current_path}'
-bind o split-window -c '#{pane_current_path}'
-bind C-o split-window -c '#{pane_current_path}'
+# idea like window splits
+bind -n M-e split-window -h -c '#{pane_current_path}'
+bind -n M-o split-window -c '#{pane_current_path}'
 
 # act like GNU screen
 unbind C-b
@@ -49,29 +47,26 @@ bind -n M-j select-pane -D
 bind -n M-k select-pane -U
 bind -n M-l select-pane -R
 
-bind-key -n M-1 select-window -t 1
-bind-key -n M-2 select-window -t 2
-bind-key -n M-3 select-window -t 3
-bind-key -n M-4 select-window -t 4
-bind-key -n M-5 select-window -t 5
-bind-key -n M-6 select-window -t 6
-bind-key -n M-7 select-window -t 7
-bind-key -n M-8 select-window -t 8
-bind-key -n M-9 select-window -t 9
-
-# re-number
-bind ` move-window -r
+bind -n M-1 select-window -t 1
+bind -n M-2 select-window -t 2
+bind -n M-3 select-window -t 3
+bind -n M-4 select-window -t 4
+bind -n M-5 select-window -t 5
+bind -n M-6 select-window -t 6
+bind -n M-7 select-window -t 7
+bind -n M-8 select-window -t 8
+bind -n M-9 select-window -t 9
 
 # sync
 bind b set-window-option synchronize-panes
 bind C-b set-window-option synchronize-panes
 
 # zoom / search
-bind-key / copy-mode \; send-key ?
-bind-key -n C-] copy-mode
+bind -n C-f copy-mode
+bind -n C-g copy-mode \; send-key ?
 
 # renaming
-bind-key , command-prompt "rename-window '%%'"
+bind , command-prompt "rename-window '%%'"
 set-option -g allow-rename off
 set-window-option -g automatic-rename off
 
@@ -88,7 +83,8 @@ bind -T copy-mode-vi 'H' send -X start-of-line
 bind -T copy-mode-vi 'L' send -X end-of-line
 
 # more vim-like selections
-unbind-key -T copy-mode-vi v
+unbind -T copy-mode-vi v
+bind -T copy-mode-vi Enter send-keys -X cursor-down
 bind -T copy-mode-vi 'v' send -X begin-selection
 bind -T copy-mode-vi 'y' send-keys -X run-shell -d 0.3 \; send-keys -X copy-pipe-and-cancel
 bind -T copy-mode-vi 'Y' send-keys -X select-line \; run-shell -d 0.3 \; send-keys -X copy-pipe-and-cancel
@@ -119,7 +115,7 @@ set-option -g display-panes-colour "#fabd2f"
 # clock
 set-window-option -g clock-mode-colour "#b8bb26"
 
-# copy mode highligh
+# copy mode highlight
 set-window-option -g mode-style "fg=#bdae93,bg=#504945"
 
 # bell
