tmux: swap C-f and C-g - too much muscle memory

--- a/shell/.config/tmux/tmux.conf
+++ b/shell/.config/tmux/tmux.conf
@@ -62,8 +62,8 @@ bind b set-window-option synchronize-panes
 bind C-b set-window-option synchronize-panes
 
 # zoom / search
-bind -n C-f copy-mode
-bind -n C-g copy-mode \; send-key ?
+bind -n C-f copy-mode \; send-key ?
+bind -n C-g copy-mode
 
 # renaming
 bind , command-prompt "rename-window '%%'"
