--- a/shell/.config/tmux/tmux.conf
+++ b/shell/.config/tmux/tmux.conf
@@ -85,9 +85,10 @@ bind -T copy-mode-vi 'L' send -X end-of-line
 # more vim-like selections
 unbind -T copy-mode-vi v
 bind -T copy-mode-vi Enter send-keys -X cursor-down
+unbind -T copy-mode-vi MouseDragEnd1Pane
 bind -T copy-mode-vi 'v' send -X begin-selection
-bind -T copy-mode-vi 'y' send-keys -X run-shell -d 0.3 \; send-keys -X copy-pipe-and-cancel
-bind -T copy-mode-vi 'Y' send-keys -X select-line \; run-shell -d 0.3 \; send-keys -X copy-pipe-and-cancel
+bind -T copy-mode-vi 'y' send-keys -X run-shell -d 0.3 \; send-keys -X copy-pipe
+bind -T copy-mode-vi 'Y' send-keys -X select-line \; run-shell -d 0.3 \; send-keys -X copy-pipe
 bind -T copy-mode-vi 'C-q' send -X rectangle-toggle
 
 # COLOUR (base16)
