--- a/wm/.config/clipcat/clipcatd.toml
+++ b/wm/.config/clipcat/clipcatd.toml
@@ -12,7 +12,7 @@ level = "INFO"
 
 [watcher]
 enable_clipboard = true
-enable_primary = true
+enable_primary = false
 enable_secondary = false
 filter_text_min_length = 1
 filter_text_max_length = 20000000
