--- a/shell/.config/tmux/tmux.conf
+++ b/shell/.config/tmux/tmux.conf
@@ -90,6 +90,7 @@ bind -T copy-mode-vi 'v' send -X begin-selection
 bind -T copy-mode-vi 'y' send-keys -X run-shell -d 0.3 \; send-keys -X copy-pipe
 bind -T copy-mode-vi 'Y' send-keys -X select-line \; run-shell -d 0.3 \; send-keys -X copy-pipe
 bind -T copy-mode-vi 'C-q' send -X rectangle-toggle
+bind -T copy-mode-vi 'C-f' send-key ?
 
 # COLOUR (base16)
 
