tmux: rebind the old splits for ConnectBot

--- a/shell/.config/tmux/tmux.conf
+++ b/shell/.config/tmux/tmux.conf
@@ -8,9 +8,13 @@ set -g history-limit 100000
 set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",xterm-256color:RGB"
 
-# idea like window splits
+# idea like window splits - Calacalacutacuta-e-o-e-o
 bind -n M-e split-window -h -c '#{pane_current_path}'
 bind -n M-o split-window -c '#{pane_current_path}'
+bind e split-window -h -c '#{pane_current_path}'
+bind o split-window -c '#{pane_current_path}'
+bind C-e split-window -h -c '#{pane_current_path}'
+bind C-o split-window -c '#{pane_current_path}'
 
 # act like GNU screen
 unbind C-b
