--- a/wm/.config/i3/config
+++ b/wm/.config/i3/config
@@ -121,26 +121,18 @@ bindsym $mod+Shift+9 move container to workspace number 9
 # move the current workspace to the next output
 bindsym $mod+x move workspace to output right
 
-# resize window (you can also use the mouse for that)
+# resize mode (vim for fine-grained, arrows for coarse)
 mode "resize" {
-    # These bindings trigger as soon as you enter the resize mode
-
-    # Pressing left will shrink the window’s width.
-    # Pressing right will grow the window’s width.
-    # Pressing up will shrink the window’s height.
-    # Pressing down will grow the window’s height.
     bindsym h resize shrink width 1 px or 1 ppt
     bindsym k resize grow height 1 px or 1 ppt
     bindsym j resize shrink height 1 px or 1 ppt
     bindsym l resize grow width 1 px or 1 ppt
 
-    # same bindings, but for the arrow keys
     bindsym Left  resize shrink width 5 px or 5 ppt
     bindsym Up    resize grow height 5 px or 5 ppt
     bindsym Down  resize shrink height 5 px or 5 ppt
     bindsym Right resize grow width 5 px or 5 ppt
 
-    # back to normal: Enter or Escape
     bindsym Return mode "default"
     bindsym Escape mode "default"
 }
