tmux: play with auto-rename

--- a/shell/.config/tmux/tmux.conf
+++ b/shell/.config/tmux/tmux.conf
@@ -71,8 +71,8 @@ bind -n C-g copy-mode
 
 # renaming
 bind , command-prompt "rename-window '%%'"
-set-option -g allow-rename off
-set-window-option -g automatic-rename off
+set-option -g automatic-rename on
+set-option -g automatic-rename-format "#(echo '#{pane_current_path}' | sed -e s#^/home/${USER}#~#g | rev | cut -d'/' -f-3 | rev)"
 
 # instant escapes
 set -g escape-time 0
