tmux: extract pane path script

--- a/shell/.config/tmux/tmux.conf
+++ b/shell/.config/tmux/tmux.conf
@@ -72,7 +72,7 @@ bind -n C-g copy-mode
 # renaming
 bind , command-prompt "rename-window '%%'"
 set-option -g automatic-rename on
-set-option -g automatic-rename-format "#(echo '#{pane_current_path}' | sed -e s#^/home/${USER}#~#g | rev | cut -d'/' -f-3 | rev)"
+set-option -g automatic-rename-format "#(tmux-pane-path '#{pane_current_path}')"
 
 # instant escapes
 set -g escape-time 0
