--- a/misc/.config/mpd-pulse.conf
+++ b/misc/.config/mpd-pulse.conf
@@ -5,11 +5,12 @@ db_file "~/.local/state/mpd/mpd.db"
 state_file "~/.local/state/mpd/mpdstate"
 playlist_directory "~/.local/state/mpd/playlists"
 
-music_directory "~/.local/state/mpd/music"
+music_directory "~/mnt/vinyl"
 
 audio_output {
     type "pulse"
     name "mpd_pulse"
 }
 
-bind_to_address "127.0.0.1"
+bind_to_address "~/.local/state/mpd/socket"
+zeroconf_enabled "yes"
