mpv: prefer vulkan decoding

--- a/misc/.config/mpv/mpv.conf
+++ b/misc/.config/mpv/mpv.conf
@@ -1,8 +1,10 @@
-hwdec=auto-safe
+hwdec=vulkan
 msg-level=all=v
 ytdl-format="bestvideo[height<=?1080][vcodec!^=vp]+bestaudio"
 sub-auto=all
 slang=en
+vo=gpu-next
+gpu-api=vulkan
 
 # other options for decoding
 #hwdec=no
