--- a/gnupg/.local/share/gnupg/gpg.conf
+++ b/gnupg/.local/share/gnupg/gpg.conf
@@ -1,17 +1,33 @@
-personal-digest-preferences SHA512 SHA384 SHA256
 personal-cipher-preferences AES256 AES192 AES
+personal-digest-preferences SHA512 SHA384 SHA256
 personal-compress-preferences ZLIB BZIP2 ZIP Uncompressed
 default-preference-list SHA512 SHA384 SHA256 AES256 AES192 AES ZLIB BZIP2 ZIP Uncompressed
 cert-digest-algo SHA512
 s2k-digest-algo SHA512
 s2k-cipher-algo AES256
 
+charset utf-8
+
+no-comments
+no-emit-version
+no-greeting
+
 keyid-format 0xlong
+list-options show-uid-validity
+verify-options show-uid-validity
 with-fingerprint
 with-wkd-hash
-fingerprint
 
-default-key 0xB36842BFB2F1EBA8
+# Enforce memory locking to avoid accidentally swapping GPG memory to disk
+require-secmem
+# Disable caching of passphrase for symmetrical ops
+no-symkey-cache
+# Output ASCII instead of binary
+armor
+# Enable smartcard
+use-agent
+# Disable recipient key ID in messages (breaks Mailvelope)
+throw-keyids
 
 keyserver hkps://keyserver.ubuntu.com
 keyserver-options auto-key-retrieve
