--- a/misc/.config/mpd-alsa.conf
+++ b/misc/.config/mpd-alsa.conf
@@ -5,7 +5,7 @@ db_file "~/.local/state/mpd/mpd.db"
 state_file "~/.local/state/mpd/mpdstate"
 playlist_directory "~/.local/state/mpd/playlists"
 
-music_directory "~/.local/state/mpd/music"
+music_directory "~/sshfs/media/vinyl"
 
 audio_output {
     type "alsa"
@@ -19,4 +19,4 @@ audio_output {
     dop "yes"
 }
 
-bind_to_address "127.0.0.1"
+zeroconf_enabled "yes"
