--- a/misc/.config/mpd-pulse.conf
+++ b/misc/.config/mpd-pulse.conf
@@ -5,12 +5,11 @@ db_file "~/.local/state/mpd/mpd.db"
 state_file "~/.local/state/mpd/mpdstate"
 playlist_directory "~/.local/state/mpd/playlists"
 
-music_directory "~/mnt/vinyl"
+music_directory "~/sshfs/media/vinyl"
 
 audio_output {
     type "pulse"
     name "mpd_pulse"
 }
 
-bind_to_address "~/.local/state/mpd/socket"
 zeroconf_enabled "yes"
