--- a/shell/.config/tmux/tmux.conf
+++ b/shell/.config/tmux/tmux.conf
@@ -4,10 +4,6 @@ set -g default-command "exec zsh"
 # increase scrollback lines
 set -g history-limit 100000
 
-# improve colors
-set -g default-terminal "tmux-256color"
-set -ga terminal-overrides ",xterm-256color:RGB"
-
 # idea like window splits - Calacalacutacuta-e-o-e-o
 bind -n M-e split-window -h -c '#{pane_current_path}'
 bind -n M-o split-window -c '#{pane_current_path}'
@@ -99,30 +95,29 @@ bind -T copy-mode-vi 'C-f' send-key ?
 # COLOUR (base16)
 
 # default statusbar colors
-set-option -g status-style "fg=#bdae93,bg=#3c3836"
-
-# default window title colors
-set-window-option -g window-status-style "fg=#bdae93,bg=default"
+set-option -g status-style "fg=#ADB5BF,bg=#101617"
 
 # active window title colors
-set-window-option -g window-status-current-style "fg=#fabd2f,bg=default"
+set-window-option -g window-status-current-style "fg=#ffffff,bg=#29414F"
+set-window-option -g window-status-current-format " #I #W "
+set-window-option -g window-status-format " #I #W "
 
 # pane border
 set-option -g pane-border-style "fg=#3c3836"
-set-option -g pane-active-border-style "fg=#504945"
+set-option -g pane-active-border-style "fg=#2a6978"
 
 # message text
-set-option -g message-style "fg=#d5c4a1,bg=#3c3836"
+set-option -g message-style "fg=#ffffff,bg=#2a9791"
 
 # pane number display
-set-option -g display-panes-active-colour "#b8bb26"
-set-option -g display-panes-colour "#fabd2f"
+set-option -g display-panes-colour "#65737e"
+set-option -g display-panes-active-colour "#99c794"
 
 # clock
-set-window-option -g clock-mode-colour "#b8bb26"
+set-window-option -g clock-mode-colour "#99c794"
 
 # copy mode highlight
-set-window-option -g mode-style "fg=#bdae93,bg=#504945"
+set-window-option -g mode-style "bg=#163A52"
 
 # bell
-set-window-option -g window-status-bell-style "fg=#3c3836,bg=#fb4934"
+set-window-option -g window-status-bell-style "bg=#fb4934"
