--- a/wm/.config/alacritty/alacritty.toml
+++ b/wm/.config/alacritty/alacritty.toml
@@ -1,54 +1,34 @@
-[[colors.indexed_colors]]
-color = "#fe8019"
-index = 16
+[env]
+TERM = "alacritty-direct"
 
-[[colors.indexed_colors]]
-color = "#d65d0e"
-index = 17
+# Colors (Oceanic Next)
 
-[[colors.indexed_colors]]
-color = "#3c3836"
-index = 18
-
-[[colors.indexed_colors]]
-color = "#504945"
-index = 19
-
-[[colors.indexed_colors]]
-color = "#bdae93"
-index = 20
-
-[[colors.indexed_colors]]
-color = "#ebdbb2"
-index = 21
-
-[colors.bright]
-black = "#665c54"
-blue = "#83a598"
-cyan = "#8ec07c"
-green = "#b8bb26"
-magenta = "#d3869b"
-red = "#fb4934"
-white = "#fbf1c7"
-yellow = "#fabd2f"
-
-[colors.cursor]
-cursor = "#d5c4a1"
-text = "#1d2021"
-
-[colors.normal]
-black = "#1d2021"
-blue = "#83a598"
-cyan = "#8ec07c"
-green = "#b8bb26"
-magenta = "#d3869b"
-red = "#fb4934"
-white = "#d5c4a1"
-yellow = "#fabd2f"
-
+# Default colors
 [colors.primary]
-background = "#1d2021"
-foreground = "#d5c4a1"
+background = '#1a2426'
+foreground = '#c7dfe0'
+
+# Normal colors
+[colors.normal]
+black   = '#29414f'
+red     = '#ec5f67'
+green   = '#99c794'
+yellow  = '#fac863'
+blue    = '#6699cc'
+magenta = '#c594c5'
+cyan    = '#5fb3b3'
+white   = '#65737e'
+
+# Bright colors
+[colors.bright]
+black   = '#405860'
+red     = '#ec5f67'
+green   = '#99c794'
+yellow  = '#fac863'
+blue    = '#6699cc'
+magenta = '#c594c5'
+cyan    = '#5fb3b3'
+white   = '#adb5c0'
 
 [font]
 size = 11 #fontsize
