--- a/shell/.config/tmux/tmux.conf
+++ b/shell/.config/tmux/tmux.conf
@@ -47,6 +47,7 @@ bind -n M-j select-pane -D
 bind -n M-k select-pane -U
 bind -n M-l select-pane -R
 
+# window navigation
 bind -n M-1 select-window -t 1
 bind -n M-2 select-window -t 2
 bind -n M-3 select-window -t 3
@@ -56,6 +57,10 @@ bind -n M-6 select-window -t 6
 bind -n M-7 select-window -t 7
 bind -n M-8 select-window -t 8
 bind -n M-9 select-window -t 9
+
+# window shuffling
+bind -n M-L swap-window -d -t +1
+bind -n M-H swap-window -d -t -1
 
 # sync
 bind b set-window-option synchronize-panes
