i3wsr: configure more apps

--- a/wm/.config/i3wsr/config.toml
+++ b/wm/.config/i3wsr/config.toml
@@ -1,7 +1,9 @@
 [icons]
 # font awesome
 TelegramDesktop = ""
+64Gram = ""
 firefox = ""
+cachy-browser = ""
 Chromium = ""
 Alacritty = ""
 jetbrains-idea = ""
