--- a/wm/.config/i3/config
+++ b/wm/.config/i3/config
@@ -162,6 +162,8 @@ bar {
     output DP-1
     output DP-2
     output DP-4
+    output DP-0.8
+    output DP-0.1.8
     output HDMI2
     output Virtual-1
 
