--- a/wm/.config/i3/config
+++ b/wm/.config/i3/config
@@ -29,6 +29,7 @@ bindsym $mod+0x60 exec alacritty -e tmux new-session -A -D -s base
 bindsym $mod+t exec pcmanfm
 bindsym $mod+slash exec firefox
 bindsym $mod+Shift+slash exec firefox --private-window
+bindsym $mod+period exec intellij-idea-ultimate-edition
 
 # pkm
 bindsym $mod+0x27 exec --no-startup-id raiseorlaunch -c obsidian -e obsidian
