tools: kubecolor global

--- a/devel/.config/mise/config.toml
+++ b/devel/.config/mise/config.toml
@@ -12,6 +12,7 @@ clusterctl = "1.10.7"
 helm = "3.18.4"
 helmfile = "1.1.2"
 kubectl = "1.33.6"
+kubecolor = "0.5.3"
 kubelogin = "latest"
 pipx = "latest"
 sops = "3.9.4"
