--- a/shell/.config/tmux/tmux.conf
+++ b/shell/.config/tmux/tmux.conf
@@ -92,8 +92,9 @@ unbind -T copy-mode-vi v
 bind -T copy-mode-vi Enter send-keys -X cursor-down
 unbind -T copy-mode-vi MouseDragEnd1Pane
 bind -T copy-mode-vi 'v' send -X begin-selection
-bind -T copy-mode-vi 'y' send-keys -X run-shell -d 0.3 \; send-keys -X copy-pipe
-bind -T copy-mode-vi 'Y' send-keys -X select-line \; run-shell -d 0.3 \; send-keys -X copy-pipe
+set -s copy-command "tmux-copy-pipe"
+bind -T copy-mode-vi 'y' send-keys -X run-shell -d 0.2 \; send-keys -X copy-pipe
+bind -T copy-mode-vi 'Y' send-keys -X select-line \; run-shell -d 0.2 \; send-keys -X copy-pipe
 bind -T copy-mode-vi 'C-q' send -X rectangle-toggle
 bind -T copy-mode-vi 'C-f' send-key ?
 
